istio/overlays/k8s-us-east-1/patches/ingressgateway-resources.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
spec:
  template:
    spec:
      containers:
        - name: istio-proxy
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 300m
              memory: 250Mi
