istio/overlays/k8s-us-east-1/patches/ingressgateway-hetzner.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  annotations:
    load-balancer.hetzner.cloud/ipv6-disabled: "true"
    load-balancer.hetzner.cloud/location: ash
    external-dns.alpha.kubernetes.io/hostname: istio-ingress.k8s-east.unreliable.cloud
    ad.datadoghq.com/service.check_names: '["http_check"]'
    ad.datadoghq.com/service.init_configs: '[{}]'
    ad.datadoghq.com/service.instances: |-
      [
        {
          "name": "Istio Ingress Check",
          "url": "http://istio-ingress.k8s-east.unreliable.cloud:15021",
          "timeout": 10,
          "http_response_status_code": "404"
        }
      ]
