istio/overlays/k8s-us-east-1/patches/istio-validating-webhook-annotation.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: istio-validator-istio-system
  annotations:
    kustomize.toolkit.fluxcd.io/reconcile: disabled
